syntax = "proto3";
package smartair.sensorService;

option java_multiple_files = true;
option java_package = "smartair.sensorService";
option java_outer_classname = "sensorServiceImpl";


// Interface exported by the server.
service sensorService {
  
  rpc inputData(inputDataRequest) returns (inputDataResponse) {}
  rpc getData(getDataRequest) returns (getDataResponse) {}
    
}

message inputDataRequest {
 
  //current timestamp of data
  double currentTimeStamp = 1;
  //COemission detected
  float coReading = 2; 
}



message inputDataResponse {
  bool dataRegistred = 1;
}

message getDataRequest {
  //time of data detection
  double timeStamp = 1;  
}

message getDataResponse {
  //last timestamp of data 
  double fromTimeStamp = 1;
  //COemission detected
  float coReading = 2; 
}